[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
googletrans = "^3.0.0"
openai = "^0.27.2"
xds-protos = "^0.0.11"
google-api-python-client = "^2.83.0"
stripe = "^5.4.0"
Flask-Login = "^0.6.2"
Flask-WTF = "^1.1.1"
Flask-Session = "^0.4.0"
utils = "^1.0.1"
langdetect = "^1.0.9"
textblob = "^0.17.1"
emoji = "^2.2.0"
google-trans-new = "^1.1.9"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"